Check Api-Gateway for order service call